--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-    <link rel="icon shortcut" href="images/binary-code (3).png">
+    <link rel="icon shortcut" href="images/favicon.png">
     <link href="https://fonts.googleapis.com/css2?family=Pangolin&display=swap" rel="stylesheet">
     <title>Mano Simulator</title>
     <script src="app.js" defer></script>
@@ -51,16 +51,32 @@
         </div>
     </div>
     <div id="help" class="help">
+        <div class="help-header">
+            <img src="images/favicon.png" alt="">
+            <h1>MANO SIMULATOR</h1>
+        </div>
+        <h2>About</h2>
+        <p>this program is a simulator for basic MANO computer</p>
+        <p>it has a memory table that shows address and content of memory</p>
+        <p>it has a instruction table that shows detail of calculations</p>
         <h2>How to use this program?</h2>
         <p>
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptate at deleniti ex veritatis vero minus repudiandae? Mollitia animi non, error quos, numquam quasi quisquam ullam ipsum dolore, repellat quas! Error!
+            1.place your code in editor
         </p>
-
+        <p>
+            2.click on Assemble button
+        </p>
+        <p>
+            3.for every instruction, click on fetch button then decode button then execute button
+        </p>
+        <h4 class="note">NOTE: you should keep the order of clicking on buttons otherwise it wont work properly</h4>
+        <h4 class="note">NOTE: to use program again, click on reset button</h4>
+        <h4 class="myself">created By HADIS GHAFOURI</h4>
         <button id="close-btn" class="btn">Close</button>
     </div>
-    <footer>
+    <!-- <footer>
         <p class="text-center">Created By HADIS GHAFOURI</p>
-    </footer>
+    </footer> -->
 </body>
 
 </html>
