add social-media part to project

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="icon shortcut" href="images/favicon.png">
     <link href="https://fonts.googleapis.com/css2?family=Pangolin&display=swap" rel="stylesheet">
     <title>Mano Simulator</title>
+    <script src="https://kit.fontawesome.com/d8428dc404.js" crossorigin="anonymous"></script>
     <script src="app.js" defer></script>
     <script src="draw_tables.js" defer></script>
     <script src="instructions.js" defer></script>
@@ -93,6 +94,11 @@
         <h4 class="note">NOTE: you should keep the order of clicking on buttons otherwise it wont work properly</h4>
         <h4 class="note">NOTE: to use program again, click on reset button</h4>
         <h4 class="myself">created By HADIS GHAFOURI</h4>
+        <h3>view the prodess of coding in my github:)</h3>
+        <ul id="social-meida_container">
+            <li><a href="https://github.com/hadis98/Mano-simulator"><i class="fab fa-github"></i></a></li>
+            <li><a href="https://www.linkedin.com/in/hadis-ghafouri-73a8281b3/"><i class="fa fa-linkedin social-media__link"></i></a></li>
+        </ul>
         <button id="close-btn" class="btn">Close</button>
     </div>
     <!-- <footer>
